# OOP_Basic

./: Basic.cpp  CMakeLists.txt  Makefile  README.md  evalstate.cpp  evalstate.h  parser.cpp  program.h  statement.h
Basic/: basic  exp.cpp  exp.h  program.cpp  statement.cpp
StanfordCPPLib/: CMakeLists.txt
Test/: code
